# legal-assistant-env

./: .env.example  .gitignore  Dockerfile  HACKATHON_CONTEXT.md  LICENSE  README.md  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/core/: config.py  exceptions.py  logging.py
app/features/environment/: env.py  models.py  router.py  state.py
app/features/health/: router.py
app/features/tasks/: base.py
app/features/tasks/compliance_check/: fixtures.py  grader.py  indian_law_db.py  task.py
app/features/tasks/content_review/: fixtures.py  grader.py  task.py
app/features/tasks/format_check/: fixtures.py  grader.py  task.py
server/: app.py
tests/: test_env.py  test_graders.py
